# backend/controllers/userCtrl.js
@@ -398,12 +398,12 @@ async function updateUserProfile(req, res) {
     if (!req.body.full_name) {
         return res.json(Response(400, 'Required full_name are missing!'));
     }
-    if (!req.body.job_id) {
-        return res.json(Response(400, 'Required job_id are missing!'));
-    }
-    if (req.body.newPassword && req.body.newPassword != "" && !req.body.oldPassword) {
-        return res.json(Response(400, 'Required old password are missing!'));
-    }
+    // if (!req.body.job_id) {
+    //     return res.json(Response(400, 'Required job_id are missing!'));
+    // }
+    // if (req.body.newPassword && req.body.newPassword != "" && !req.body.oldPassword) {
+    //     return res.json(Response(400, 'Required old password are missing!'));
+    // }
     const passUser = await User.findOne({ "_id": req.body.user._id });
     //const imageUrl = req.headers.origin;
     if (passUser) {
@@ -413,58 +413,72 @@ async function updateUserProfile(req, res) {
         if (!req.body.phone_nymber) {
             req.body.phone_nymber = req.body.user.phone_nymber;
         } */
-        if (req.body.newPassword && req.body.newPassword != "") {
-            bcrypt.compare(req.body.oldPassword, req.body.user.password, function (err, result) {
-                if (result == true) {
-                    req.body.newPassword = bcrypt.hashSync(req.body.newPassword, saltRounds);
-                    User.findOneAndUpdate(
-                        { _id: req.body.user._id },
-                        {
-                            $set: {
-                                "full_name": req.body.full_name,
-                                "organization": req.body.organization,
-                                "job_id": req.body.job_id,
-                                "password": req.body.newPassword
-                            }
-                        }, { new: true }
-                    ).then(user => {
-                        if (!user) {
-                            return res.status(404).send(Response(404, `Invalid user ${user}`));
-                        }
-                        /* if (user.user_photo != "") {
-                            user.user_photo = imageUrl + user.user_photo;
-                        } */
-                        res.status(201).send(Response(200, "Profile updated successfully!", user));
-                    }).catch(err => {
-                        res.status(500).send(Response(500, "Some error occurred while retrieving user."));
-                    });
-                } else {
-                    return res.status(400).send(Response(400, 'Incorrect old password!'));
-                }
-            });
-        } else {
-            User.findOneAndUpdate(
-                { _id: req.body.user._id },
-                {
-                    $set: {
-                        "full_name": req.body.full_name,
-                        "organization": req.body.organization,
-                        "job_id": req.body.job_id
-                    }
-                }, { new: true }
-            ).then(user => {
-                if (!user) {
-                    return res.status(404).send(Response(404, `Invalid user ${user}`));
-                }
-                /*  if (user.user_photo != "") {
-                     user.user_photo = imageUrl + user.user_photo;
-                 } */
-                res.status(201).send(Response(200, "Profile updated successfully!", user));
-            }).catch(err => {
-                res.status(500).send(Response(500, "Some error occurred while retrieving user."));
-            });
-        }
+        // if (req.body.newPassword && req.body.newPassword != "") {
+        //     bcrypt.compare(req.body.oldPassword, req.body.user.password, function (err, result) {
+        //         if (result == true) {
+        //             req.body.newPassword = bcrypt.hashSync(req.body.newPassword, saltRounds);
+        //             User.findOneAndUpdate(
+        //                 { _id: req.body.user._id },
+        //                 {
+        //                     $set: {
+        //                         "full_name": req.body.full_name,
+        //                     }
+        //                 }, { new: true }
+        //             ).then(user => {
+        //                 if (!user) {
+        //                     return res.status(404).send(Response(404, `Invalid user ${user}`));
+        //                 }
+        //                 /* if (user.user_photo != "") {
+        //                     user.user_photo = imageUrl + user.user_photo;
+        //                 } */
+        //                 res.status(201).send(Response(200, "Profile updated successfully!", {}));
+        //             }).catch(err => {
+        //                 res.status(500).send(Response(500, "Some error occurred while retrieving user."));
+        //             });
+        //         } else {
+        //             return res.status(400).send(Response(400, 'Incorrect old password!'));
+        //         }
+        //     });
+        // } else {
+        //     User.findOneAndUpdate(
+        //         { _id: req.body.user._id },
+        //         {
+        //             $set: {
+        //                 "full_name": req.body.full_name
+        //             }
+        //         }, { new: true }
+        //     ).then(user => {
+        //         if (!user) {
+        //             return res.status(404).send(Response(404, `Invalid user ${user}`));
+        //         }
+        //         /*  if (user.user_photo != "") {
+        //              user.user_photo = imageUrl + user.user_photo;
+        //          } */
+        //         res.status(201).send(Response(200, "Profile updated successfully!", {}));
+        //     }).catch(err => {
+        //         res.status(500).send(Response(500, "Some error occurred while retrieving user."));
+        //     });
+        // }
         //console.log('updatedField', updatedField);
+
+        User.findOneAndUpdate(
+            { _id: req.body.user._id },
+            {
+                $set: {
+                    "full_name": req.body.full_name
+                }
+            }, { new: true }
+        ).then(user => {
+            if (!user) {
+                return res.status(404).send(Response(404, `Invalid user ${user}`));
+            }
+            /*  if (user.user_photo != "") {
+                 user.user_photo = imageUrl + user.user_photo;
+             } */
+            res.status(201).send(Response(200, "Profile updated successfully!", {}));
+        }).catch(err => {
+            res.status(500).send(Response(500, "Some error occurred while retrieving user."));
+        });
     } else {
         return res.status(400).send(Response(400, 'Email Address is missing !'));
     }
